# dagster-playground

./: .dockerignore  .gitignore  docker-compose.yml
dagster-deployment/: .dockerignore  Dockerfile  dagster.yaml  pyproject.toml  workspace.yaml
dagster-utils/: .gitignore  Makefile  pyproject.toml
dagster-utils/dagster_utils/dagsterhub/: __init__.py  asset_job_factory.py  configure_assets.py  ops.py  partitions.py  s3_io_manager.py  slack_sensor.py  sqs_email_sensor.py
dagster-utils/dagster_utils/lib/: __init__.py  _base_middleware.py  _mock_requests_response.py  _types.py  gdrive.py  gmail.py  gsheets.py  pcloud.py  pubchem.py  snow.py
dagster-utils/dagster_utils/lib/_stub/gmail/: bar.json  foo.json
dagster-utils/dagster_utils/utils/: __init__.py  auth.py  check.py  dicts.py  misc.py
dagster-utils/dagster_utils_tests/: conftest.py
dagster-utils/dagster_utils_tests/dagsterhub/: test_ops.py  test_resources.py  test_sensors.py
dagster-utils/dagster_utils_tests/lib/: conftest.py  test_gmail.py  test_gsheets.py  test_pcloud.py  test_pubchem.py  test_types.py
dagster-utils/dagster_utils_tests/lib/_stub/pcloud/file_open/: flags=0x0400&fileid=some_id
dagster-utils/dagster_utils_tests/lib/_stub/pcloud/listfolder/: folderid=123456&recursive=True&nofiles=True  folderid=12356
dagster-utils/dagster_utils_tests/lib/_stub/pcloud/stat/: fileid=some_id
dagster-utils/dagster_utils_tests/lib/_stub/pubchem/: glucose.json
dagster-utils/dagster_utils_tests/utils/: test_auth.py  test_check.py  test_dict.py  test_misc.py
localstack/: dagster.yaml  ucr-entrypoint.sh
playground/: .gitignore  Dockerfile  Makefile  pyproject.toml
playground/playground/: __init__.py  assets.py
